--- a/lib/bindings/Makefile
+++ b/lib/bindings/Makefile
@@ -14,7 +14,7 @@ all:
 install:
 	cp openblas_cblas_bindings.ml ../
 	cp openblas_cblas_generated* ../
-	cp openblas_lapacke.ml ../
+	cp openblas_lapacke.ml* ../
 	cp openblas_lapacke_generated_stub.c ../
 test:
 	#ocamlfind ocamlc -c -linkpkg -package ctypes.stubs openblas_lapacke_generated.ml
