--- a/lib/bindings/Makefile
+++ b/lib/bindings/Makefile
@@ -2,20 +2,20 @@ all:
 	# generate cblas bindings
 	ocamlfind ocamlc -linkpkg -package str,unix openblas_cblas_parser.ml -o openblas_cblas_parser.native
 	./openblas_cblas_parser.native openblas_cblas_bindings.ml openblas_cblas.ml
-	
+
 	# generate lapacke bindings
 	ocamlfind ocamlc -linkpkg -package str,unix openblas_lapacke_parser.ml -o openblas_lapacke_parser.native
 	./openblas_lapacke_parser.native ../lapacke.h openblas_lapacke_bindings.ml openblas_lapacke.ml
 
 	# generate interface using ctypes
 	ocamlfind ocamlc -c -linkpkg -package ctypes.stubs openblas_cblas_bindings.ml
-	ocamlfind ocamlc -linkpkg -package ctypes.stubs openblas_cblas_bindings.cmo openblas_cblas_stubgen.ml -o openblas_cblas_stubgen.byte
+	ocamlfind ocamlc -linkpkg -package ctypes.stubs openblas_cblas_bindings.cmo openblas_cblas_stubgen.ml -o openblas_cblas_stubgen.native
 	ocamlfind ocamlc -c -linkpkg -package ctypes.stubs openblas_lapacke_bindings.ml
-	ocamlfind ocamlc -linkpkg -package ctypes.stubs openblas_lapacke_bindings.cmo openblas_lapacke_stubgen.ml -o openblas_lapacke_stubgen.byte
-	./openblas_cblas_stubgen.byte -ml > openblas_cblas_generated.ml
-	./openblas_cblas_stubgen.byte -c > openblas_cblas_generated_stub.c
-	./openblas_lapacke_stubgen.byte -ml > openblas_lapacke_generated.ml
-	./openblas_lapacke_stubgen.byte -c > openblas_lapacke_generated_stub.c
+	ocamlfind ocamlc -linkpkg -package ctypes.stubs openblas_lapacke_bindings.cmo openblas_lapacke_stubgen.ml -o openblas_lapacke_stubgen.native
+	./openblas_cblas_stubgen.native -ml > openblas_cblas_generated.ml
+	./openblas_cblas_stubgen.native -c > openblas_cblas_generated_stub.c
+	./openblas_lapacke_stubgen.native -ml > openblas_lapacke_generated.ml
+	./openblas_lapacke_stubgen.native -c > openblas_lapacke_generated_stub.c
 install:
 	cp openblas_cblas.ml* ../
 	cp openblas_cblas_generated_stub.c ../
@@ -25,6 +25,6 @@ test:
 	#ocamlfind ocamlc -c -linkpkg -package ctypes.stubs openblas_lapacke_generated.ml
 	ocamlfind ocamlc -c -linkpkg -package ctypes.stubs openblas_cblas_generated.ml
 clean:
-	rm -rf _build *.cmo *.cmi *.byte *.so
+	rm -rf _build *.cmo *.cmi *.native *.so
 	rm -rf openblas_*_generated* openblas_lapacke_bindings.ml
 	rm -rf openblas_cblas.ml* openblas_lapacke.ml*
