--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: c
 sudo: required
 install:
-  - brew upgrade gcc
-  - brew install homebrew/science/openblas
+  - if [ $TRAVIS_OS_NAME = linux ]; then sudo apt-get install liblapacke-dev libopenblas-dev; else brew install homebrew/science/openblas; fi
   - wget https://raw.githubusercontent.com/ocaml/ocaml-ci-scripts/master/.travis-opam.sh
 script: bash -ex .travis-opam.sh
 env:
   - OCAML_VERSION=4.04 EXTRA_DEPS="oasis" INSTALL=false
 os:
   - osx
+  - linux
