--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,18 @@ matrix:
       env: OCAML_VERSION=4.04 EXTRA_DEPS="oasis" INSTALL=false
     - os: linux
       env: OCAML_VERSION=4.04 EXTRA_DEPS="oasis" INSTALL=false
+      addons:
+        apt:
+          packages:
+            - gcc
+            - gfortran
+            - cmake
+            - libopenblas-dev
+            - liblapacke-dev
 
 install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
       sudo apt-get update;
-      sudo apt-get install liblapacke-dev libopenblas-dev;
     elif [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then
       brew update;
       brew install homebrew/science/openblas;
