--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,7 @@ install:
       sudo apt-get update;
     elif [[ "${TRAVIS_OS_NAME}" == "osx" ]]; then
       brew update;
+      rm '/usr/local/include/c++';
       brew install homebrew/science/openblas;
     fi
   - wget https://raw.githubusercontent.com/ocaml/ocaml-ci-scripts/master/.travis-opam.sh
