--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,9 @@ matrix:
   include:
     - os: osx
       osx_image: xcode8.2
-      env: OCAML_VERSION=4.04 EXTRA_DEPS="oasis" INSTALL=false
+      env:
+        - OCAML_VERSION=4.04 EXTRA_DEPS="oasis" INSTALL=false
+        - LIBRARY_PATH="$LIBRARY_PATH:/usr/local/opt/openblas/lib"
     - os: linux
       dist: trusty
       env: OCAML_VERSION=4.04 EXTRA_DEPS="oasis" INSTALL=false
