--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,7 @@ matrix:
   include:
     - os: osx
       osx_image: xcode8.2
-      env:
-        - OCAML_VERSION=4.04 EXTRA_DEPS="oasis" INSTALL=false
-        - LIBRARY_PATH="$LIBRARY_PATH:/usr/local/opt/openblas/lib"
-        - LIBRARY_PATH="$LIBRARY_PATH:/usr/local/lib/gcc/7:/usr/local/lib/gcc/5"
-        - LIBRARY_PATH="$LIBRARY_PATH:/usr/local/opt/gcc/lib/gcc/7"
+      env: OCAML_VERSION=4.04 EXTRA_DEPS="oasis" INSTALL=false
     - os: linux
       dist: trusty
       env: OCAML_VERSION=4.04 EXTRA_DEPS="oasis" INSTALL=false
